--- a/.github/workflows/tests-check.yml
+++ b/.github/workflows/tests-check.yml
@@ -1,8 +1,8 @@
 name: tests-check
 
 on:
-  - push
-  - pull_request
+  push:
+  pull_request:
 
 jobs:
   build:
@@ -11,27 +11,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install python
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: 3.8
+          python-version: 3.10
 
       - name: Install dependencies
         run: |
           pip install poetry
-          make install
+          poetry install  # Installs dependencies including pytest
 
       - name: Run tests
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
-          make test
-
-      - name: Run code coverage
-        uses: paambaati/codeclimate-action@v3.2.0
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        with:
-          coverageCommand: make test-coverage
-          debug: true
+          poetry run pytest  # Runs pytest within the Poetry-managed environment
