--- a/.github/workflows/tests-check.yml
+++ b/.github/workflows/tests-check.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           pip install poetry
           poetry install
+          poetry add --dev pytest
 
       - name: Run tests
         env:
