--- a/.github/workflows/tests-check.yml
+++ b/.github/workflows/tests-check.yml
@@ -20,15 +20,9 @@ jobs:
         run: |
           pip install poetry
           poetry install
-          poetry add --dev pytest
 
-      - name: Set up Django settings module
-        run: |
-          export DJANGO_SETTINGS_MODULE=task_manager.settings
-
-      - name: Run tests
+      - name: Run tests and generate coverage report
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          DJANGO_SETTINGS_MODULE: task_manager.settings
         run: |
-          poetry run pytest
+          poetry run make test-coverage
