--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ rollbar = "^0.16.3"
 flake8 = "^7.1.0"
 coverage = "^7.5.3"
 ipython = "^8.25.0"
+pytest = "^8.2.2"
 
 [build-system]
 requires = ["poetry-core"]
