--- a/.github/workflows/tests-check.yml
+++ b/.github/workflows/tests-check.yml
@@ -1,28 +1,35 @@
 name: tests-check
 
 on:
-  push:
-  pull_request:
+  - push
+  - pull_request
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        # we want to test our package on several versions of Python
+        python-version: [3.10.12]
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.10.12
-
+          python-version: ${{ matrix.python-version }}
+        # make depends on poetry
       - name: Install dependencies
         run: |
           pip install poetry
-          poetry install
-
-      - name: Run tests and generate coverage report
-        env:
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          make install
+      - name: Run linter and pytest
         run: |
-          poetry run make test-coverage
+          make check
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v5.0.0
+        if: github.ref_name == 'main'
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
