--- a/.github/workflows/tests-check.yml
+++ b/.github/workflows/tests-check.yml
@@ -9,7 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # we want to test our package on several versions of Python
         python-version: [3.10.12]
     steps:
       - uses: actions/checkout@v4
@@ -17,19 +16,21 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-        # make depends on poetry
       - name: Install dependencies
         run: |
           pip install poetry
-          make install
-      - name: Run linter and pytest
+          poetry install
+      - name: Run linter
         run: |
-          make check
+          poetry run flake8 task_manager
+      - name: Run tests
+        run: |
+          poetry run pytest
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v5.0.0
         if: github.ref_name == 'main'
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
-          coverageCommand: make test-coverage
+          coverageCommand: poetry run coverage run -m pytest
           debug: true
