--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ python = "^3.10"
 django = "^5.0.6"
 python-dotenv = "^1.0.1"
 dj-database-url = "^2.2.0"
-django-bootstrap5 = "^24.2"
 psycopg2-binary = "^2.9.9"
 gunicorn = "^22.0.0"
 django-bootstrap4 = "^24.3"
@@ -34,6 +33,10 @@ flake8 = "^7.1.0"
 coverage = "^7.5.3"
 ipython = "^8.25.0"
 pytest = "^8.2.2"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "task_manager.settings"
+python_paths = ["task_manager"]
 
 [build-system]
 requires = ["poetry-core"]
