--- a/.github/workflows/tests-check.yml
+++ b/.github/workflows/tests-check.yml
@@ -20,12 +20,10 @@ jobs:
         run: |
           pip install poetry
           poetry install
-      - name: Run linter
+      - name: Run linter and pytest
         run: |
           poetry run flake8 task_manager
-      - name: Run tests
-        run: |
-          DJANGO_SETTINGS_MODULE=task_manager.settings poetry run pytest
+          poetry run pytest
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v5.0.0
         if: github.ref_name == 'main'
