--- a/.github/workflows/tests-check.yml
+++ b/.github/workflows/tests-check.yml
@@ -1,34 +1,37 @@
-name: tests-check
+name: Python CI
 
 on:
   - push
   - pull_request
+  - workflow_dispatch
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        # if  you want to test yr app on several versions of Python, just add them to list
         python-version: [3.10.12]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+        # make depends on poetry
       - name: Install dependencies
         run: |
           pip install poetry
-          poetry install
-      - name: Run linter and pytest
-        run: |
-          poetry run flake8 task_manager
-          poetry run pytest
-      - name: Test & publish code coverage
-        uses: paambaati/codeclimate-action@v5.0.0
-        if: github.ref_name == 'main'
+          make install
+      - name: Run test and linter
+        run: make check
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          SECRET_KEY: secret
+      - name: Publish code coverage report
+        uses: paambaati/codeclimate-action@v3.2.0
+        env:
+          SECRET_KEY: secret
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
         with:
-          coverageCommand: poetry run coverage run -m pytest
-          debug: true
+          coverageCommand: make test-coverage
+
