--- a/.github/workflows/tests-check.yml
+++ b/.github/workflows/tests-check.yml
@@ -1,37 +1,31 @@
 name: Python CI
 
 on:
-  - push
-  - pull_request
-  - workflow_dispatch
+  push:
+    branches: [ main ]
+  
+  workflow_dispatch:
 
 jobs:
-  build:
+  tests-and-linter-check:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # if  you want to test yr app on several versions of Python, just add them to list
-        python-version: [3.10.12]
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-        # make depends on poetry
-      - name: Install dependencies
+      - uses: actions/checkout@v2
+      
+      - name: Install depenpencies
         run: |
           pip install poetry
-          make install
-      - name: Run test and linter
-        run: make check
+          poetry install
+                
+      - name: Run lint task
+        run: make lint
+
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v2.7.5
         env:
-          SECRET_KEY: secret
-      - name: Publish code coverage report
-        uses: paambaati/codeclimate-action@v3.2.0
-        env:
-          SECRET_KEY: secret
-          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
         with:
           coverageCommand: make test-coverage
-
+          debug: true
