--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,26 @@
 name: my_check
 
-on:
-  - push
-  - pull_request
+on: push
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Install python
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
           python-version: 3.8
-
-      - name: Install dependencies
+      - name: install dependencies
         run: |
-          pip install poetry
-          make install
-
+          pip install poetry flake8 pytest
+          make setup
       - name: Run linter
-        run: |
-          make lint
+        run: make lint
+      - name: Code Coverage
+        uses: paambaati/codeclimate-action@v3.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
