--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,42 @@
 name: my_check
 
-on: push
+on:
+  push:
+  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
-          pip install poetry flake8 pytest
-          make setup
-      - name: Run linter
-        run: make lint
-      - name: Code Coverage
-        uses: paambaati/codeclimate-action@v3.0.0
+          pip install poetry
+          make install
+
+      - name: Set Django settings module
+        run: export DJANGO_SETTINGS_MODULE=task_manager.settings
+
+      - name: Run linter and pytest
+        env:
+          SECRET_KEY_APP: ${{ secrets.SECRET_KEY }}
+        run: |
+          make check
+
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v2.7.4
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
-          coverageCommand: make test-coverage
           debug: true
