--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ flake8 = "^7.1.0"
 coverage = "^7.5.3"
 ipython = "^8.25.0"
 pytest = "^8.2.2"
+pytest-django = "^4.8.0"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "task_manager.settings"
