--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ coverage = "^7.5.3"
 ipython = "^8.25.0"
 pytest = "^8.2.2"
 pytest-django = "^4.8.0"
+pytest-cov = "^5.0.0"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "task_manager.settings"
